--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -7,6 +7,8 @@ node {
 	}
 	stage('test') {
 		nodejs(nodeJSInstallationName: 'nodejs') {
+		    sh 'node -v'
+		    sh 'npm -v'
 			sh 'npm install --only=dev'
 			sh 'npm test'
 		}
