--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -10,7 +10,7 @@ node {
 		    sh 'node -v'
 		    sh 'npm -v'
 			sh 'npm install --only=dev'
-			sh 'npm test'
+			//sh 'npm run test'
 		}
 	}
 	stage('docker build/push') {
